fix(home): equalize TikTok logo left/right margins for centered alignment

--- a/src/components/home-comps/showcase/index.module.less
+++ b/src/components/home-comps/showcase/index.module.less
@@ -76,7 +76,7 @@
     height: 2em;
     width: auto;
     // The SVG has ~25% built-in padding; pull it in with negative margins
-    margin: -0.51em -0.2em -0.51em -0.35em;
+    margin: -0.51em -0.25em -0.51em -0.25em;
     vertical-align: middle;
     position: relative;
     top: -0.04em;
